<resources>
    <string name="app_name">AdWork</string>
    <string name="retry">Retry</string>
    <string name="check_your_internet">Please check your internet connection and try again</string>
    <string name="welcome_to_adwork">Welcome ! Earn Money by rating true or false to facts from around the world.</string>
    <string name="more_watch">There are no wrong or right answers. Rate and get Paid!</string>
    <string name="into_2_string">All payments are done every 10th of the following Month</string>
    <string name="online_payments">Payments are done online through Paypal. Ensure you have a working Paypal account to receive payments</string>
    <string name="welcome_enjoy">The more you rate, the more you get to earn and learn</string>
    <string name="all_shopping_delivered">Enjoy! Have fun making your dreams come true</string>
    <string name="login">Continue</string>
    <string name="username_terms">Your username &amp; email only apply to this device and are not used for login purposes</string>
    <string name="choose_your_username">Choose your username</string>
    <string name="watch_ad">Watch and rate Video</string>
    <string name="watch_more_ads_to_earn_points">Watch and rate more Videos to earn points.\n\nMinimum withdrawal is $20\n\nPayments are done via PayPal every 10th of the following Month after submission.</string>
    <string name="enter_your_email">Enter Your PayPal Email Address</string>
    <string name="withdraw">Send withdrawal request</string>
    <string name="withdraw_text">Payments are done every 10th of the following Month after submission\n\nYou can withdraw as many times as you want during the month\n\nCommunications are done via email only</string>
    <string name="rate_ad">How was the Video?\n\nGive it a rating and say something about it</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="add_details">More details (optional)</string>
    <string name="knowledge_one">Welcome !\n\nHere you can earn money by rating facts true or false &amp; watching videos.\n\nThe more you rate, the more you earn.</string>
    <string name="knowledge_two">Every fact you rate earns you money in the App\n\nThere are no wrong or right answers. You earn money either way.</string>
    <string name="knowledge_three">You must have at least $20 to make a withdrawal request\n\nAll withdrawals are paid via PayPal every 10th of the following month\n\nStart rating and start earning today\n\nTerms &amp; Conditions apply.</string>
    <string name="got_it">got it</string>
    <string name="info_four">We value our customers 24/7\n\nWe aim to make your experience with our App smooth, fruitful and seamless\n\nThank you for choosing us to help you make money online daily\n\nIf you ever run into any problems, feel free to contact us at adwork254@gmail.com\n\nand we will get back to you within 24hrs\n\n\n\n\n\n© AdWork 2022</string>
    <string name="info_three">While you use the App, we collect some data to help make your experience seamless\n\nSome of the data we collect are; but not limited to:\n\n- Username\n- Email Address\n- Points earned\n- Estimated money made\n&amp;\n- Current date\n\nPlease note:\nWe DO NOT sell your data to any third party company\n\nAll data collected is secured using end to end encryption\n\nWe may occasionally send you emails about updates &amp; news we may have\n\nIf for any reason you would like to have your data deleted from our servers, do not hesitate to reach out to us\n\n\n\n\n\n© AdWork 2022</string>
    <string name="info_one">Every time you rate a fact &amp; watch an ad, you earn money\n\nThe more facts you rate &amp; ads you watch, the more you get to earn\n\nHow much money a fact or ad is worth is calculated automatically &amp; an estimate is given for reference\n\nThe estimated earning are subjected to review, taxes and commissions at the end of each month\n\nThe highest earner of the month gets a BONUS reward each and every month\n\nSo what are you waiting for? Start earning online today with AdWork !\n\nPlease note:\nSkipping an ad after rating a fact may lead to less earnings\n\nSo make sure you watch ads as much as you can\n\n\n\n\n\n© AdWork 2022</string>
    <string name="info_two">We require you to have a minimum of $20 points to make a withdrawal request\n\nAll payments are made through PayPal so please have an active PayPal account\n\nAfter earning enough money, you can make a withdrawal request from your profile page at any time of the month\n\nPlease note:\nPayments are made every 10th of the following month after a withdrawal request is made\n\nYou can make as many withdrawal requests as possible during the month and get a large payout at the end\n\nThe opportunities are endless with AdWork !\n\n\n\n\n\n© AdWork 2022</string>
    <string name="withdraw_success">Congratulations!\n\nYour withdrawal request has been sent successfully\n\nWe will get back to you after reviewing your request and deductions having been made\n\nPlease note:\nThe money value indicated on the app is an estimate and the actual value may vary after your request is reviewed</string>
    <string name="swipe_info">Swipe left &amp; right to see more tabs</string>
    <string name="transparency_headline">Here, Transparent is how we deliver to you and Honest in what we say to you, every day, everywhere.</string>
    <string name="transparency_details">Get all the information you need about the data we collect, how you use the app and how much money you have earned from using the app</string>
    <string name="warning_text">You may lose funds by not having an active internet connection while using the app</string>
    <string name="okay">okay</string>
    <string name="enter_your_email2">Enter your email address</string>
    <string name="terms_and_conditions">By continuing, you accept our terms and conditions</string>
    <string name="swipe_main">Swipe right if the fact sounds true or swipe left if the fact sounds false\n\nRemember, there are no right or wrong answers, you still earn money either way</string>
    <string name="close">Cancel</string>
    <string name="delete_profile">I understand</string>
    <string name="delete_profile_txt">When you delete your account, you will loose all your earnings and records forever!\n\nThis information cannot be recovered later\n\nAre you sure you want continue?</string>
    <string name="withdraw_warning">Warning !\n\nYou must have at least $20 estimate to make a withdrawal request\n\nKeep using the app to earn more</string>
</resources>