<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_rounded"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:src="@drawable/money_icon" />

        <EditText
            android:id="@+id/paypal_email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/quite_magical"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/quite_magical"
            android:gravity="center"
            android:text="@string/withdraw_text"
            android:textColor="@color/d_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonWithdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_button4"
            android:fontFamily="@font/quite_magical"
            android:padding="10dp"
            android:text="@string/withdraw"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_button3"
            android:fontFamily="@font/quite_magical"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>

